fix: remove scrollbar from smart env input component on firefox (#3362)

--- a/packages/hoppscotch-ui/src/assets/scss/styles.scss
+++ b/packages/hoppscotch-ui/src/assets/scss/styles.scss
@@ -31,6 +31,10 @@
   @apply h-0;
 }
 
+.no-scrollbar {
+  scrollbar-width: none;
+}
+
 input::placeholder,
 textarea::placeholder,
 .cm-placeholder {
